[package]
name = "vault-program"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "vault_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = {version = "0.27.0", features = ["init-if-needed"]}
anchor-spl = {version = "0.27.0", features = ["metadata", "associated_token"]}
bs58 = "0.4.0"
mpl-token-metadata = {version="1.8.5", features= ["no-entrypoint"]}


