[package]
name = "vault-program"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "vault_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = {version = "0.28.0", features = ["init-if-needed"]}
anchor-spl = {version = "0.28.0", features = ["metadata", "associated_token"]}
getrandom = { version = "0.2.9", features = ["custom"] }
mpl-token-metadata = {version="1.8.5", features= ["no-entrypoint"]}
solana-program = "=1.14.17"
winnow="=0.4.1"
toml_datetime="=0.6.1"
bs58 = "0.5.0"
spl-memo = "3.0.1"




